tests/data/good/inheritance.py
from __future__ import annotations

from ..base_cfg import schema

schema = schema.inherit()
schema.DICT.BAR = "BAR"
