tests/data/bad/missing.py
from ntc import CN

from ..base_cfg import cfg

cfg = CN(cfg)
cfg.DICT.INT = 2
